--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/index.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/index.css
@@ -207,25 +207,24 @@
 }
 
 .category-title {
-    flex-basis: 80%;
-    max-width: 80%;
+    flex-basis: 60%;
+    max-width: 60%;
     padding-left: 10px;
     font-weight: bold;
     color: darkslateblue;
     margin-top: 1%;
 }
 
-.Topic-num {
-    flex-basis: 17%;
-    max-width: 17%;
+.Topic-info {
+    flex-basis: 30%;
+    max-width: 30%;
     color: #004085;
     background-color: #cce5ff;
     border-color: #b8daff;
 }
 
-    .Topic-num > p {
+    .Topic-info > p {
         text-align: left;
         margin-bottom: 0px !important;
-        margin-top: 5%;
         margin-left: 10px;
     }
