--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Shared/_Layout.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Shared/_Layout.cshtml
@@ -39,7 +39,17 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <div class="footer-containt">
+                <img src="~/Image/Banner_Pic/heart2.png" class="footer-img" />
+                <div class="slogan-containt">
+                    <div class="slogan-1">
+                        Because a Healthy Famlily
+                    </div>
+                    <div class="slogan-2">
+                        is a Happy Family !
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 
