--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -53,6 +53,7 @@
             @Html.LabelFor(model => model.Topic_Info, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Topic_Info)
+                @*<textarea id="Topic_Info" name="Topic_Info">&lt;p&gt;Initial value.&lt;/p&gt;</textarea>*@
                 @Html.ValidationMessageFor(model => model.Topic_Info, "", new { @class = "text-danger" })
                 
             </div>
@@ -88,7 +89,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Content/ckeditor/ckeditor.js"></script>
     <!--<script type="text/javascript">
         var editor = CKEDITOR.instances['Topic_Info'];
         if (editor) { editor.destroy(true); }
@@ -100,13 +100,28 @@
             filebrowserImageUploadUrl: '/uploader/upload.php?type=Images'
         });
     </script>-->
-<script language="JavaScript" type="text/javascript">
-        CKEDITOR.replace('Topic_Info',
+    <!--<script language="JavaScript" type="text/javascript">
+    var editor = CKEDITOR.instances['Topic_Info'];
+    if (editor) { editor.destroy(true); }
+    CKEDITOR.replace('Topic_Info',
             {
-                filebrowserBrowseUrl: '/Content/ckeditor/uploader/upload.php',
-                filebrowserUploadUrl: '~/Content/ckeditor/uploader/upload.php'
+                enterMode: CKEDITOR.ENTER_BR,
+                filebrowserBrowseUrl: '/browser/browser.php',
+                filebrowserUploadUrl: '/uploader/upload.php'
             });
 
         CKEDITOR.replace('Topic_Info', { toolbar: 'Topic_Info' });
+</script>-->
+    <script type="text/javascript">
+        CKEDITOR.replace('Topic_Info', {
+            filebrowserImageBrowseUrl: '/Topics/uploadPartial',
+            filebrowserImageUploadUrl: '/Topics/uploadnow'
+        });
+
+        function updateValue(id, value) {
+            // this gets called from the popup window and updates the field with a new value
+            document.getElementById(id).value = value;
+        }
 </script>
+
 }
