--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/index.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/index.css
@@ -28,7 +28,10 @@ footer {
 .navbar-light .navbar-nav .nav-link {
     font-size: 20px;
 }
-
+.img-fluid {
+    width: 100%;
+    height: 330px;
+}
 /*Breadcumb begn*/
 .searching {
     margin: auto;
@@ -37,7 +40,8 @@ footer {
 .breadcrumb-link {
     color: white !important;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 20px !important;
+    font-weight: bold;
 }
 
     .breadcrumb-link:hover {
@@ -233,7 +237,6 @@ footer {
     padding-top: 1%;
     padding-right: 15px;
 }
-
     .Topic-info > p {
         text-align: left;
         margin-bottom: 0px !important;
@@ -249,7 +252,22 @@ footer {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.footer-containt{
+/* This code for ListCategories*/
+.info-containt{
+    background-color: white;
+    padding: 2%;
+}
+.category-topic-containt {
+    margin-top: 5%;
+    border: solid 1px darkgray;
+    padding: 1%;
+    border-radius: 5px;
+}
+.category-topic-info{
+    display: flex;
+    padding: 1%;
+}
+.footer-containt {
     position: relative;
 }
 .slogan-containt {
