--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Shared/_Layout.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @model IEnumerable<Dr4rum_eProjectIII.Models.Group>
 </head>
 <body>
     <div class="container body-content">
@@ -20,8 +21,9 @@
                     </a>
                 </div>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Groups", "Index", "Home", null, new { @class = "nav-link" })</li>
+
+                    <li>@Html.ActionLink("Categories", "About", "Home", null, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
                 </ul>
                 <!-- Searching-->
