--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/index.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/index.css
@@ -37,6 +37,10 @@ footer {
     height: 330px;
 }
 /*Breadcumb begn*/
+.breadcrumb-containt {
+    position: relative;
+}
+
 .searching {
     margin: auto;
 }
@@ -46,11 +50,20 @@ footer {
     text-decoration: none;
     font-size: 20px !important;
     font-weight: bold;
+    text-transform: lowercase;
 }
 
-    .breadcrumb-link:hover {
-        text-decoration: none;
+    .breadcrumb-link::first-letter {
+        text-transform: uppercase !important;
     }
+
+.btn.btn-info.c-info::first-letter {
+    text-transform: uppercase !important;
+}
+
+.breadcrumb-link:hover {
+    text-decoration: none;
+}
 
 @media (max-width: 767px) {
     .btn-breadcrumb {
@@ -187,6 +200,23 @@ footer {
 .breadcrumb-info {
     font-size: 20px !important;
 }
+
+.add-topic-btn {
+    position: absolute;
+    right: 15px;
+    margin-right: 1%;
+    top: 15%;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+
+#add-btn-ListofCat {
+    padding: 5px 15px;
+    border-radius: 5px;
+    max-width: 12%;
+    /*unset*/
+    position: inherit;
+}
 /*Breadcumb end*/
 .index-list-containt {
     background-color: #FFFFFF;
@@ -265,11 +295,12 @@ footer {
     padding: 2%;
 }
 
-.category-topic-containt {
-    margin-top: 5%;
+.main-containt {
+    margin-top: 1%;
     border: solid 1px darkgray;
     padding: 1%;
     border-radius: 5px;
+    text-align: justify;
 }
 
 .alert.alert-warning.category-topic-titleContaint {
@@ -310,6 +341,7 @@ footer {
     text-transform: lowercase;
     color: darkblue;
 }
+
 .info-Name {
     font-size: 12px;
     color: darkgray;
@@ -333,9 +365,12 @@ footer {
     border-right: solid 1px lightblue;
 }
 
+.post-info-containt {
+    text-align: end;
+    flex-basis: 20%;
+}
+
 .info-topicPoster {
-    flex-basis: 18%;
-    max-width: 18%;
     text-align: end;
     color: darkblue;
 }
@@ -345,7 +380,45 @@ footer {
     padding: 1%;
     border-bottom: solid 1px lightblue;
 }
-
+/*  This code for TopicDetails */
+.header-containt {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2%
+}
+.avt-header-containt {
+    flex-basis: 15%;
+    max-width: 15%;
+    border-right: solid 1px lavender;
+}
+.Topic-header-containt {
+    flex-basis: 80%;
+    max-width: 80%
+}
+.separate-containt {
+    background-image: url(../Image/Banner_Pic/User/separate.jpg);
+    max-width: 100%;
+    height: 50px;
+    background-position: center;
+}
+#topic-containt {
+    margin-top: 5px;
+    margin-bottom: 0px !important;
+}
+#topic-header-containt {
+    padding-top: 1%;
+}
+#topic-avt-header-containt {
+    border-right: solid 1px cornflowerblue;
+}
+#post-info {
+    color: black;
+}
+.post-info {
+    flex-basis: 83%;
+    max-width: 83%;
+}
+/*   end TopicDetails */
 .footer-containt {
     position: relative;
 }
