--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<Dr4rum_eProjectIII.Models.Group>
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
 <!-- Banner-->
 <img src="~/Image/Banner_Pic/User/index_banner.jpg" class="img-fluid" alt="Responsive image">
 <!-- breadcrumb-->
@@ -63,3 +65,4 @@
         }
     </div>
 </div>
+<script src="~/Scripts/MyScript/indexFunction.js"></script>
