--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/ListGroup.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/ListGroup.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<Dr4rum_eProjectIII.Models.Group>
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
 <!-- Banner-->
 <img src="~/Image/Banner_Pic/User/group.jpg" class="img-fluid" alt="Responsive image">
 @foreach (var groupItem in Model)
@@ -22,8 +24,9 @@
                 <!-- header -->
                 <div class="card cta cta--featured" id="catItem-containt">
                     <div class="card-block " id="header-ListGroup-containt">
-                        <div class="card-title no-margin-top" id="catItem-title">@catItem.Category_Name
-                            <span>                               
+                        <div class="card-title no-margin-top" id="catItem-title">
+                            @catItem.Category_Name
+                            <span>
                                 @Html.ActionLink(" See More", "ListCategories", new { Category_Name = catItem.Category_Name }, new { @class = "btn btn-warning btn-moreCat" })
                             </span>
                         </div>
@@ -45,7 +48,7 @@
                         </div>
                         <!-- Info-->
                         <div class="ListGroup-mainInfo-containt alert alert-success">
-                            @foreach (var Topic in catItem.Topics.ToList())
+                            @foreach (var Topic in catItem.Topics.ToList().Take(3))
                             {
                                 <div class="ListGroup-titleContaint" id="ListGroup-mainInfo">
                                     <div class="ListGroup-topicTitle">
@@ -82,3 +85,4 @@
         }
     </div>
 }
+<script src="~/Scripts/MyScript/indexFunction.js"></script>
